@@ -1,3 +1,10 @@
+2005-10-20 10:46 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridcad.c (gridNewGeometryEdgeSiteAllowedAt) fixed multiple
+	bugs relating to use of unitiaized memeory: obtain edgeId, compute
+	ratio, index nodes1 instead of nodes0 twice, set uv[*],[1]. unit
+	tests save the day!
+
 2005-10-18 12:27 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridedger.c (gridedgerSegmentT) linearly interpolate the t
